--- a/Final_Project/Users/requirements.txt
+++ b/Final_Project/Users/requirements.txt
@@ -1,7 +1,34 @@
-Flask
-SQLAlchemy
-Flask-SQLAlchemy
-flask_sqlalchemy_session
-requests
-response
-gevent
+# Core Flask dependencies
+Flask==2.3.3
+Werkzeug==2.3.7
+
+# Database and ORM
+SQLAlchemy==2.0.21
+Flask-SQLAlchemy==3.0.5
+flask-sqlalchemy-session==0.4.0
+
+# HTTP client
+requests==2.31.0
+
+# WSGI server
+gevent==23.7.0
+
+# Logging and monitoring
+structlog==23.1.0
+
+# Development and testing
+pytest==7.4.2
+pytest-flask==1.2.0
+pytest-cov==4.1.0
+black==23.7.0
+flake8==6.0.0
+mypy==1.5.1
+
+# Type hints
+typing-extensions==4.7.1
+
+# Security
+cryptography==41.0.4
+
+# Environment management
+python-dotenv==1.0.0
